# SQLformer

./: .gitignore  Makefile  README.md  environment.yml  eval.py  install_pytorch.sh  preprocess.py  pyproject.toml  run_preprocessing.sh  run_training.sh  train.py  utils.py
config/: configs.py
data/: dataset.py
loaders/: dataset_loader.py
models/: layers.py  model.py  utils.py
models/decoders/: transformer_decoder.py
models/encoders/: gat_encoder.py  gcn_encoder.py  gnn_encoder_factory.py  transformer_encoder.py
preprocessing/: spider_queries_to_graph.py  spider_questions_to_graph.py  spider_schemas_to_graph.py  structures.py  vocabulary.py  vocabulary_handler.py
spider_eval/: __init__.py  evaluation.py
tests/: test_preprocessing.py
