[tool.poetry]
name = "sqlformer"
version = "0.1.0"
description = ""
authors = ["AdrianBZG <adrianrodriguezbazaga@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pandas = "1.3.5"
networkx = "2.8.7"
matplotlib = "3.6.1"
stanza = "1.4.2"
sqlglot = "10.0.2"
torch_optimizer = "0.3.0"
numpy = "1.25.2"
nltk = "3.8.1"
sentencepiece = "0.1.99"
pillow = "9.0.1"
transformers = "4.32.1"
sentence-transformers = "2.2.2"
tqdm = "4.64.1"
torch = { version = "2.0.1", optional = true }
torch_geometric = { version = "2.3.1", optional = true }

[tool.poetry.extras]
torch = ["torch"]
torch_geometric = ["torch_geometric"]

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
use_parentheses = true
known_first_party = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
